<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="myName"
            type="com.example.aboutme.MyName" />
    </data>
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/name_text"
            style="@style/Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={myName.name}"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/nickname_edit"
            style="@style/Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nickname_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/nick_name"
            android:textAlignment="center" />

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/done"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/nickname_text"
            style="@style/Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={myName.nickName}"
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/star_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yellow_star"
            android:paddingTop="@dimen/yellow_star_padding"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scroll_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lineSpacingMultiplier="1.2 "
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/scroll_text" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>